<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mxkj.econtrol.ui.activity.SelectPictureActivity">

    <LinearLayout
        android:layout_width="680px"
        android:orientation="vertical"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/please_select_operation"
        android:textColor="@color/com_black" />

    <Button
        android:id="@+id/btn_change_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/com_white"
        android:onClick="onClick"
        android:text="@string/change_admin"
        android:textColor="@color/com_black" />

    <Button
        android:id="@+id/btn_unbind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1px"
        android:background="@color/com_white"
        android:text="@string/unbind"
        android:textColor="@color/com_black" />
    </LinearLayout>
</LinearLayout>

