<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context="com.mxkj.econtrol.ui.activity.SettingActivity">

    <include layout="@layout/incloud_title_layout2"></include>

    <RelativeLayout
        android:id="@+id/rl_modify_password"
        style="@style/FragmentMy_RelativeLayout_Prass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/modify_password"
            android:textColor="@color/text_black_666"
            android:textSize="32px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/center_enter" />

        <View
            style="@style/view_line"
            android:layout_alignParentBottom="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_language"
        style="@style/FragmentMy_RelativeLayout_Prass"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/language"
            android:textColor="#444444"
            android:textSize="28px" />

        <ImageView
            android:layout_width="34px"
            android:layout_height="34px"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_alignParentBottom="true"
            android:background="#e5e5e5" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_clear_cache"
        style="@style/FragmentMy_RelativeLayout_Prass">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/clear_cache"
            android:textColor="@color/text_black_666"
            android:textSize="32px" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/center_enter" />


    </RelativeLayout>

    <View style="@style/view_line" />

    <RelativeLayout
        android:id="@+id/rl_logout"
        style="@style/FragmentMy_RelativeLayout_Prass"
        android:layout_marginTop="20px">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/logout"
            android:textColor="@color/text_reg"
            android:textSize="32px" />
    </RelativeLayout>

    <View style="@style/view_line" />


</LinearLayout>
