<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/com_white">

  <RelativeLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="700px"
    android:layout_height="464px"
    android:background="@color/com_white">
    <RelativeLayout
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="195px"
        android:layout_marginTop="44px">

        <ImageView
            android:id="@+id/imv_heat"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/ic_model_heat" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imv_heat"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36px"
            android:text="@string/make_heat"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="397px"
        android:layout_marginTop="44px">

        <ImageView
            android:id="@+id/imv_cool"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/ic_model_cool"
            app:layout_auto_baseheight="width" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imv_cool"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36px"
            android:text="@string/make_cool"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="195px"
        android:layout_marginRight="195px"
        android:layout_marginTop="280px">

        <ImageView
            android:id="@+id/imv_dry"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/ic_model_dry"
            app:layout_auto_baseheight="width" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imv_dry"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36px"
            android:text="@string/dry"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_marginLeft="397px"
        android:layout_marginTop="280px">

        <ImageView
            android:id="@+id/imv_air"
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@drawable/ic_model_air"
            app:layout_auto_baseheight="width" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imv_air"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="36px"
            android:text="@string/air"
            android:textColor="#333333"
            android:textSize="24px" />
    </RelativeLayout>
</RelativeLayout>
</RelativeLayout>